# retrievault

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  generate_dataset.py  pyproject.toml
backend/retrievault/: api.py  chunker.py  collection.py  config.py  ingest.py
backend/retrievault/rerank/: __init__.py  reranker.py
backend/retrievault/retrieve/: __init__.py  hybrid_search.py  query_encoder.py
backend/retrievault/synthesize/: citations.py  graph.py  llm_client.py  prompt.py
backend/tests/: test_api.py  test_chunker.py  test_config.py  test_ingest.py  test_rerank.py  test_retrieve.py  test_synthesize.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatInterface.tsx
