[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrievault"
version = "0.1.0"
description = "Production-grade RAG service for the FastAPI codebase"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "qdrant-client",
    "fastembed",
    "langgraph",
    "anthropic",
    "pydantic-settings",
    "pytest",
    "ruff",
    "sentence-transformers>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["retrievault"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
